force-app/main/default/objects/AH_Case_Report_Detail__c/AH_Case_Report_Detail__c.object-meta.xml
<CustomObject>
    <label>AH Case Report Detail</label>
    <nameField>
        <displayFormat>DET-{00000000}</displayFormat>
        <label>Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Case Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>