force-app/main/default/objects/AH_Case_Report_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AH Case Report Details</relationshipLabel>
    <relationshipName>AH_Case_Report_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>