force-app/main/default/objects/AH_Case_Report_Detail__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>