force-app/main/default/objects/AH_Case_Report_Detail__c/fields/IsOverridden__c.field-meta.xml
<CustomField>
    <fullName>IsOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this record has been altered manually.</inlineHelpText>
    <label>Overridden</label>
    <type>Checkbox</type>
</CustomField>