force-app/main/default/objects/AH_Case_Report_Detail__c/fields/Log_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Log_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Timestamp of detail record</inlineHelpText>
    <label>Log Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>