force-app/main/default/objects/AH_Case_Report_Detail__c/fields/Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Elapsed (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>